# advent_of_code

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml  utils.py
src/aoc_2022/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/aoc_2024/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
tests/: test_day_1.py  test_day_10.py  test_day_12.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py
tests/2022/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
tests/2024/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
